# solwatch

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_create_accounts.sql  0002_create_txn_signatures.sql
backend/src/: app_state.rs  cors.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  message.rs  models.rs  routes.rs  solana.rs  tracer.rs
backend/src/db/: accounts.rs  transactions.rs
frontend/: Dockerfile  components.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/assets/: App.css
frontend/src/components/: Account.jsx  IndexerStats.jsx  IndexingUpdates.jsx  SearchBox.jsx  Transaction.jsx  TransactionHistory.jsx
frontend/src/components/ui/: button.jsx
frontend/src/utils/: searchData.js
