[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
bson = { version = "3.0.0", features = ["chrono-0_4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
mongodb = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "3.0.10"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.10"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
